--- a/package.json
+++ b/package.json
@@ -16,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/abdiraximov97/educational-center/issues"
   },
-  "homepage": "https://github.com/abdiraximov97/educational-center#readme"
+  "homepage": "https://github.com/abdiraximov97/educational-center#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.8.0"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
+  }
 }
