errors were managed

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MODE=dev
 PORT=8000
-**DATABASE_URL=postgres://postgres:postgres@localhost:5432/education
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/education
 JWT_SECRET=secret_word
