--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/abdiraximov97/educational-center#readme",
   "dependencies": {
+    "@types/sequelize": "^4.28.10",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
